--- a/Views/Schedules/Details.cshtml
+++ b/Views/Schedules/Details.cshtml
@@ -4,7 +4,7 @@
 
 @{
     ViewData["Title"] = Model.Name;
-    var isStudent = User.IsInRole(Roles.Student);
+    var isStudent = User.IsInRole(SchedulesRoles.Student);
     var studentNumber = User.GetStudentNumber();
     var hasAReservedSlot = Model.Slots.Any(sl => sl.Students.Any(st => st.StudentNumber == studentNumber));
 }
@@ -28,7 +28,7 @@
             <dd>Até <strong>@Html.DisplayFor(m => m.MaxStudentsPerSlot)</strong> aluno(s) por turno</dd>
         </dl>
 
-        @if (User.IsInRole(Roles.Faculty))
+        @if (User.IsInRole(SchedulesRoles.Faculty))
         {
             <div class="btn-toolbar">
                 @if (Model.When > DateTime.Now.Date)
@@ -123,7 +123,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        @{ 
+                        @{
                             var sortedStudents = Model.Students.OrderBy(s =>
                             {
                                 var number = 0;
@@ -192,36 +192,7 @@
         </div>
     </div>
 
-    @if (TempData["Message"] is string message)
-    {
-        <div class="modal fade" id="reserveSlotMessageModal" tabindex="-1" role="alertdialog" aria-labelledby="reserveSlotMessageModalLabel" aria-hidden="false">
-            <div class="modal-dialog modal-lg" role="document">
-                <form class="modal-content" asp-action="Delete" method="post">
-                    <input asp-for="Id" value="@Model.Id" type="hidden" />
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="reserveSlotMessageModalLabel">Aviso</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-
-                    <div class="modal-body">
-                        <p>@message</p>
-                    </div>
-
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-
-        <script>
-            $(document).ready(() => $('#reserveSlotMessageModal').modal('show'));
-        </script>
-    }
-
-    @if (Model.When > DateTime.Now.Date && User.IsInRole(Roles.Faculty))
+    @if (Model.When > DateTime.Now.Date && User.IsInRole(SchedulesRoles.Faculty))
     {
         <div class="modal fade" id="deleteScheduleModal" tabindex="-1" role="dialog" aria-labelledby="deleteScheduleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg" role="document">
