--- a/Views/Schedules/Index.cshtml
+++ b/Views/Schedules/Index.cshtml
@@ -7,7 +7,7 @@
 
 <h1 class="mb-3">Horários</h1>
 
-@if (User.IsInRole(Roles.Faculty))
+@if (User.IsInRole(SchedulesRoles.Faculty))
 {
 <div class="btn-group">
     <a class="btn btn-primary mb-3" asp-action="Create">Criar horário</a>
@@ -20,7 +20,7 @@
 {
     <partial name="_ListPartial" model="Model.CurrentSchedules" />
 }
-else if (User.IsInRole(Roles.Faculty))
+else if (User.IsInRole(SchedulesRoles.Faculty))
 {
     <p>Não tem horários criados. Pode <a asp-action="Create" class="btn btn-sm btn-primary">criar</a> um horário agora.</p>
 }
