--- a/Views/Schedules/Index.cshtml
+++ b/Views/Schedules/Index.cshtml
@@ -32,6 +32,6 @@ else
 @if (Model.PastSchedules.Any())
 {
     <h2 class="mt-3">Horários passados</h2>
-    <p>Verifique aqui os horários que já passaram.</p>
+    <p>Verifique aqui os horários passados.</p>
     <partial name="_ListPartial" model="Model.PastSchedules" />
 }
