--- a/Views/Schedules/ScheduleNotFound.cshtml
+++ b/Views/Schedules/ScheduleNotFound.cshtml
@@ -1,3 +1,5 @@
 <h1>Horário não encontrado</h1>
 
-<a asp-action="Index">Voltar ao início</a>
+<p>Lamentamos, mas o horário solicitado não foi encontrado. Pode ter sido eliminado, ou o link que usou pode estar incorreto.</p>
+
+<a asp-action="Index">Voltar à lista de horários</a>
