--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 <div class="text-center">
     @if (User.Identity.IsAuthenticated)
     {
-        <h1 class="display-4">Olá, @(User.FindFirst("given_name")?.Value ?? User.Identity.Name).</h1>
+        <h1 class="display-4">Olá, @(User.FindFirst("given_name")?.Value ?? User.Identity.Name)!</h1>
 
         <div class="row mt-5 mb-2">
             @if (User.IsInRole(SchedulesRoles.Student) || User.IsInRole(SchedulesRoles.Faculty))
